# BowlingGameKata

./: .travis.yml  CMakeLists.txt  README.md
ext/: catch.h
src/: Game.cpp  Game.h
tests/: BowlingGameTestImpl.cpp  BowlingGameTests.cpp
